mywork/force-app/main/default/objects/Auth_User__c/Auth_User__c.object-meta.xml
<CustomObject>
    <description>The link between a User and an OAuth session.</description>
    <label>Auth User</label>
    <nameField>
        <displayFormat>AU-{0000}</displayFormat>
        <label>Auth User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auth Users</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>