mywork/force-app/main/default/objects/Auth_User__c/fields/Instance_URL__c.field-meta.xml
<CustomField>
    <fullName>Instance_URL__c</fullName>
    <description>The endpoint for the instance to authenticate against</description>
    <label>Instance URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>