mywork/force-app/main/default/objects/Auth_User__c/fields/Instance_User__c.field-meta.xml
<CustomField>
    <fullName>Instance_User__c</fullName>
    <externalId>true</externalId>
    <label>Instance User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>