mywork/force-app/main/default/objects/Auth_User__c/fields/Is_For_Tools__c.field-meta.xml
<CustomField>
    <fullName>Is_For_Tools__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is For Tools</label>
    <type>Checkbox</type>
</CustomField>