mywork/force-app/main/default/objects/Auth_User__c/fields/Is_Refresh_Token_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_Refresh_Token_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Refresh Token Valid?</label>
    <type>Checkbox</type>
</CustomField>