mywork/force-app/main/default/objects/Auth_User__c/fields/Org_ID__c.field-meta.xml
<CustomField>
    <fullName>Org_ID__c</fullName>
    <label>Org ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>